[package]
name = "parse_iguana_results"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rio_api = "0.7.1"
rio_turtle = "0.7.1"
clap = { version = "3.2.22", features = ["derive"] }
regex = "1.6.0"
walkdir = "2.3.2"
chrono = "0.4.22"